@@ -2,7 +2,7 @@
 	XGngeo - TODO list
 ~~~~~~~~~~~~~~~~~~~~
 
-- Joystick key configuration support.
+- Joystick key configuration support. (IN PROGRESS)
 - ROM drivers editing interface (with online synchoniztion
 available).
 - Quick loading menu for favorite ROMs.
