@@ -5,7 +5,8 @@
 * Changes in version 17 (CVS):
 
 - New Sweedish translation by Daniel Nylander.
-
+- Possibility to set display of unavailable ROM's preview
+images in gray scale. [IN PROGRESS]
 
 
 * Changes in version 16 (2006-09-30):
